Fix mobile grid layout: col-span classes now span full width on mobile

--- a/myproject/myapp/static/css/mobile.css
+++ b/myproject/myapp/static/css/mobile.css
@@ -221,16 +221,9 @@
     grid-template-columns: 1fr !important;
   }
   
-  .col-span-1 {
-    grid-column: span 1 / span 1 !important;
-  }
-  
-  .col-span-6 {
-    grid-column: span 1 / span 1 !important;
-  }
-  
-  .col-span-12 {
-    grid-column: span 1 / span 1 !important;
+  /* Override all col-span classes to full width on mobile */
+  [class*="col-span"] {
+    grid-column: 1 / -1 !important;
   }
   
   .col-start-1,
